package com.donatrack.donaciones.domain.enums;

public enum EstadoDonacion {
    PENDIENTE,
    ASIGNADA,
    ENTREGADA
}
