package com.donatrack.donaciones.domain.enums;

public enum MedioContacto {
    CORREO,
    TELEFONO,
    WHATSAPP
}
