package com.donatrack.donaciones.domain.enums;

public enum TipoDocumento {

}
