package com.donatrack.donaciones.domain.model;

public enum TipoJuridica {
    GUBERNAMENTAL,
    ONG,
    EMPRESA,
    INSTITUCION
}