@startuml DonaTrack_Final_NoPackages
skinparam classAttributeIconSize 0
skinparam linetype ortho

' =====================================================
' CLASES
' =====================================================

abstract class Persona {
    - id: UUID
    - email: String
    - contacto: Contacto
    - direccion: Direccion
    - documento: DocumentoIdentidad
    - roles: List<Rol>
    + agregarRol(Rol r)
    + validarRol(Rol r)
    + validarDocumentacion(DocumentoIdentidad d)
    + setDocumento(DocumentoIdentidad documento)
    + actualizarInformacion(Map<String, Object> datosNuevos)
}

class Contacto {
    - correoElectronico: String
    - telefono: String
    - whatsapp: String
    - medioPredeterminado: MedioContacto
}

class PersonaHumana {
    - nombre: String
    - apellido: String
    - edad: Integer
    + validarRol(Rol r)
    + validarDocumentacion(DocumentoIdentidad d)
    + actualizarInformacion(Map<String, Object> datosNuevos)
}

class PersonaJuridica {
    - razonSocial: String
    - tipo: TipoJuridica
    - rubro: String
    - representantes: List<Representante>
    + agregarRepresentante(Representante r)
    + validarRol(Rol r)
    + validarDocumentacion(DocumentoIdentidad d)
    + actualizarInformacion(Map<String, Object> datosNuevos)
}

class DocumentoIdentidad {
    - tipo: TipoDocumento
    - numero: String
}

abstract class Rol {
    - fechaAlta: LocalDate
}

class Representante {
    - cargo: String
    - organizacion: PersonaJuridica
}

class Donante {
    - donacionesRealizadas: List<Donacion>
    - historialRecepciones: List<RecepcionDonacion>
    + agregarDonacion(Donacion d)
    + agregarRecepcion(RecepcionDonacion r)
    + consultarEstadoDonacion(Donacion d)
    + consultarEstadoTodasLasDonaciones(List<Donacion> donacionesRealizadas)
    + filtrarDonaciones(EstadoDonacion estado, String categoria)
    + verUbicacionCamion()
}

class Beneficiario {
    - necesidades: List<Necesidad>
    - donacionesAsignadas: List<Donacion>
    + registrarNecesidad(n: Necesidad)
    + confirmarRecepcion(Donacion d, List<Foto> fotosComprobante)
    + verEstadoDonaciones(List<Donacion> donacionesAsignadas)
    + verUbicacionCamion()
}

class Administrador {
    - depositoAsignado : Deposito
    - estrategiasAsignacion: AsignacionStrategy
    - estrategiasImportacion: ImportadorStrategy
    + importarDonantesMasivos(String rutaArchivo)
    + obtenerRecomendacionAsignacion(List<Donacion> donacionesDisponibles, List<Necesidad> necesidadesDeclaradas)
    + asignarDonacionFinal(Donacion d, Beneficiario b)
    + actualizarDonacionesVencidas()
    + asociarDonacion(Donacion d, Donante donante)
    + administrarCamiones()
    + verRankingMensual()
}

class Direccion {
    - calle: String
    - altura: Double
    - localidad: String
    - provincia: Provincia
    - codigoPostal: String
    - coordenadas: Coordenada
}

class Coordenada {
    - latitud: Double
    - longitud: Double
}

class Provincia {
    - nombreProvincia: String
    - pais: Pais
}

class Pais {
    - nombrePais: String
    - nacionalidad: String
}

class Camion{
    - patente: String
    - ubicacionActual: String
    - ultimaActualizacion: LocalDate
    + setUbicacionActual(String ubicacionActual)
}

class Deposito {
    - id: UUID
    - donacionesDisponibles: List<Donacion>
    - nombre: String
    - capacidadMaxima: Integer
    - direccion: Direccion
    + auditarVencidos()
    + ingresarDonacion(Donacion d) { this.donacionesDisponibles.add(d)
}

class RecepcionDonacion {
    - id: UUID
    - fechaRecepcion: LocalDate
    - donante: Donante
    - registradoPor: Administrador
    - donacionesResultantes: List<Donacion>
    - bienesBrutos: List<Bien>
    - estrategiasSegmentacion: List<EstrategiaSegmentacion>
    + procesar(List<Bien> bienesBrutos)
}

note right of RecepcionDonacion
Representa la carga física inicial.
De aquí nacen múltiples Donaciones
agrupadas por subcategoría y vencimiento.
end note

class Donacion {
    - id: UUID
    - estado: EstadoDonacion
    - bienes: List<Bien>
    - subCategoria: Categoria
    - historial: List<HistorialEstado>
    - fechaVencimiento: LocalDate
    - EntidadAsignada: Beneficiario
    - fotos: List<Foto>
    + Donacion(Categoria: Categoria)
    + agregarBien(b: Bien)
    + registrarCambioEstado(nuevoRegistro: HistorialEstado)
    + addFoto(foto: Foto)
}

class HistorialEstado {
    - estado: EstadoDonacion
    - fecha: LocalDate
    - observacion: String
    - usuario: Administrador
}

class Bien {
    - descripcion: String
    - cantidad: Double
    - unidadMedicion: String
    - esUsado: Boolean
    - fechaVencimiento: LocalDate
    - fotos: List<Foto>
    - subcategoria: Categoria
    + agregarFoto(Foto foto)
}

class Categoria {
    - nombre: String
    - descripcion: String
    - subcategorias: List<Categoria>
    + agregarSubcategoria(categoria: Categoria)
    + esSubcategoriaDe(categoria): Boolean
}

class Foto {
    - descripcion: String
    - url: String
}

abstract class Necesidad {
    - descripcion: String
    - estado: EstadoNecesidad
    - subcategoriaRequerida: Categoria
    - id: UUID
    - fechaSolicitud: Date
    + estaCubierta(): Boolean
}

class NecesidadExtraordinaria {
    - cantidadRequerida: Double
    - donacionesParciales: List<Donacion>
    + acumularDonacionesParciales(nuevaDonacion: Donacion)
    + cantidadAcumulada(): Double
    + cantidadPendiente(): Double
}

class NecesidadRecurrente {
    - cantidadObjetivo: Double
    - periodo: Double
    + FechaVencimientoPeriodo(): LocalDate
    + cumplirObjetivo(nuevaDonacion: Donacion)
    + cantidadAcumulada(nuevaDonacion: Donacion): Double
}

class Notificacion {
    - id: UUID
    - mensaje: String
    - fechaEnvio: LocalDate
    - medio: MedioContacto
    - leida: Boolean
    + marcarComoLeida()
}

interface ServicioNotificaciones {
    + enviar(Notificacion notificacion, Contacto contactoDestino)
}

interface AsignacionStrategy {
    + recomendarNecesidades(List<Donacion> donaciones, List<Necesidad> necesidades)
}

class PorPrioridad{
    + recomendarNecesidades(List<Donacion> donaciones, List<Necesidad> necesidades)
}
class PorCercania{
    + recomendarNecesidades(List<Donacion> donaciones, List<Necesidad> necesidades)
}

interface ImportadorStrategy {
    + importar(String rutaArchivo)
}

class ImportadorCSV{
    
}

interface EstrategiaSegmentacion {
    + segmentar(List<List<Bien>> bienes)
}

class SegmentarPorEstado{
    + segmentar(List<List<Bien>> listasDeBienes)
}

class SegmentarPorSubcategoria{
    + segmentar(List<List<Bien>> listasDeBienes)
}

class SegmentarPorVencimiento{
    + segmentar(List<List<Bien>> listasDeBienes)
}


' =====================================================
' ENUMS
' =====================================================

enum TipoJuridica {
    GUBERNAMENTAL
    ONG
    EMPRESA
    INSTITUCION
}

enum MedioContacto {
    CORREO
    TELEFONO
    WHATSAPP
}

enum TipoDocumento {
    DNI
    CUIT
    PASAPORTE
}

enum EstadoDonacion {
    PENDIENTE
    ASIGNADA
    ENTREGADA
    EN_DEPOSITO
    VENCIDA
}

enum EstadoNecesidad {
    PENDIENTE
    CUBIERTA
}

' =====================================================
' HERENCIA
' =====================================================

Persona <|-- PersonaHumana
Persona <|-- PersonaJuridica

Rol <|-- Representante
Rol <|-- Donante
Rol <|-- Beneficiario
Rol <|-- Administrador

Necesidad <|-- NecesidadExtraordinaria
Necesidad <|-- NecesidadRecurrente

PorPrioridad ..|> AsignacionStrategy
PorCercania ..|> AsignacionStrategy
ImportadorCSV ..|> ImportadorStrategy

SegmentarPorSubcategoria ..up|> EstrategiaSegmentacion
SegmentarPorEstado ..up|> EstrategiaSegmentacion
SegmentarPorVencimiento ..up|> EstrategiaSegmentacion

' =====================================================
' RELACIONES
' =====================================================

Persona *-- DocumentoIdentidad
DocumentoIdentidad --> TipoDocumento
PersonaJuridica --> TipoJuridica

Persona *-- Contacto
Contacto --> MedioContacto

Persona o-- Rol
Persona --> Direccion
Persona o-- "0..*" Notificacion

Representante --> PersonaJuridica

Donante --> RecepcionDonacion
Donante ..> Camion
Beneficiario ..> Camion
Beneficiario *-- Necesidad

Direccion --> Coordenada
Direccion --> Provincia
Provincia --> Pais

Deposito --> Direccion
RecepcionDonacion --> Deposito
RecepcionDonacion --> Administrador
RecepcionDonacion --> "1..*" Donacion : genera >
RecepcionDonacion ..> EstrategiaSegmentacion
RecepcionDonacion o-- Bien

ServicioNotificaciones ..> Notificacion
ServicioNotificaciones ..> Contacto

Donacion *-- HistorialEstado
Donacion o-- Bien
Donacion --> Categoria : agrupa por >
Donacion --> EstadoDonacion
Donacion --> Foto
Donacion --> Beneficiario : asignada a >

Bien --> Categoria
Bien --> Foto

HistorialEstado --> Administrador
HistorialEstado --> EstadoDonacion

Categoria --> Categoria

Necesidad --> Categoria
Necesidad --> EstadoNecesidad
Necesidad --> Donacion

Administrador ..> AsignacionStrategy : usa
Administrador ..> ImportadorStrategy : usa
Administrador --> Camion

Notificacion --> MedioContacto

@enduml